--- a/fcc-survey-form/index.html
+++ b/fcc-survey-form/index.html
@@ -7,80 +7,80 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-	<div class="container main-ctn">
-	<div class="panel panel-default">
-	<div class="panel-heading">
-	<h1 class="panel-title" id="title">Survey Form</h1>
-	<p id="description">Responsive Web Design Projects - Build a Survey Form</p>
-	</div>
-	<div class="panel-body">
-	<form id="survey-form">
-	<div class="container form-stuff">
-	<div class="form-group">
-		<label for="exampleInputUsername1" id="name-label">Username</label>
-		<input  type="text" class="form-control" id="name" placeholder="Name" required>
-	</div>
-	<div class="form-group">
-		<label for="exampleInputEmail1"  id="email-label">Email address</label>
-		<input type="email" class="form-control" id="email" placeholder="Email" pattern="\A[A-Z0-9_!#$%&'*+/=?`{|}~^.-]+@[A-Z0-9.-]+\Z" required>
-	</div>
-	<div class="form-group">
-		<label for="exampleInputAge1" id="number-label">How old are you?</label>
-		<input  type="number" class="form-control" id="number" placeholder="Age" pattern="\d+"  min="1" max="120">
-	</div>
-	<div class="form-group">
-	<label for="sel1">Select Your Houses:</label>
-	<select class="form-control" id="dropdown">
-		<option>Gryffindor</option>
-		<option>Hufflepuff</option>
-		<option>Ravenclaw</option>
-		<option>Slytherin</option>
-		</select>
-	</div>
-	<div class="form-group">
-		<label for="sel2">Select Your Pet Companion:</label>
-		<ul style="list-style: none;">
-		<li><label class="radio"><input type="radio" name="radio-buttons" value="Owl" checked> Owl</label></li>
-		<li><label class="radio"><input type="radio" name="radio-buttons" value="Cat"> Cat</label></li>
-		<li><label class="radio"><input type="radio" name="radio-buttons" value="Toad"> Toad</label> </li>
-		<li><label class="radio"><input type="radio" name="radio-buttons" value="Rat"> Rat</label> </li>
-		</ul>
-	</div>
-	<div class="form-group ">
-		<label for="sel3">Select Your Preferred Branches of Magic:</label>
-		<div class="row">
-		<div class="checkbox col-4"><label><input type="checkbox" value="Alchemy"> Alchemy</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Broomology"> Broomology</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Dark Magic"> Dark Magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Divination"> Divination</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Earth magic"> Earth magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Herbology"> Herbology</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Love Magic"> Love Magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Magizoology"> Magizoology</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Medical Magic"> Medical Magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Mental magic"> Mental magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Occlumency"> Occlumency</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Plant magic"> Plant magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Potions"> Potions</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Spell creation"> Spell creation</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Time Magic"> Time Magic</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Transfiguration"> Transfiguration</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Wandlore"> Wandlore</label></div>
-		<div class="checkbox col-4"><label><input type="checkbox" value="Weather Magic"> Weather Magic</label></div>
-	</div>
-	</div>
-	<div class="form-group">
-		<label for="comment">Leave a Comment:</label>
-		<textarea class="form-control" rows="5" id="comment"></textarea>
-	</div>
-	<div class="clearfix">
-		<button type="submit" class="btn btn-default" id="submit">Submit</button>
-	</div> 
-	</form>
-	</div>
-	</div>
-	</div>
-	</div>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<div class="container main-ctn">
+<div class="panel panel-default">
+<div class="panel-heading">
+  <h1 class="panel-title" id="title">Survey Form</h1>
+  <p id="description">Responsive Web Design Projects - Build a Survey Form</p>
+</div>
+<div class="panel-body">
+<form id="survey-form">
+  <div class="container form-stuff">
+  <div class="form-group">
+    <label for="name" id="name-label">Username</label>
+    <input  type="text" class="form-control" id="name" placeholder="Name" required name="name">
+  </div>
+  <div class="form-group">
+    <label for="email"  id="email-label">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="Email" pattern="\A[A-Z0-9_!#$%&'*+/=?`{|}~^.-]+@[A-Z0-9.-]+\Z" required name="email">
+  </div>
+  <div class="form-group">
+    <label for="age" id="number-label">How old are you?</label>
+    <input  type="number" class="form-control" id="number" placeholder="Age" pattern="\d+"  min="1" max="120" name="age">
+  </div>
+  <div class="form-group">
+  <label for="house">Select Your Houses:</label>
+   <select class="form-control" id="dropdown" name="house">
+      <option> Gryffindor</option>
+      <option> Hufflepuff</option>
+      <option> Ravenclaw</option>
+      <option> Slytherin</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="radio-buttons">Select Your Pet Companion:</label>
+     <ul style="list-style: none;">
+       <li><label class="radio"><input type="radio" name="radio-buttons" value="Owl" checked>Owl</label></li>
+       <li><label class="radio"><input type="radio" name="radio-buttons" value="Cat">Cat</label></li>
+       <li><label class="radio"><input type="radio" name="radio-buttons" value="Toad">Toad</label> </li>
+       <li><label class="radio"><input type="radio" name="radio-buttons" value="Rat">Rat</label> </li>
+    </ul>
+  </div>
+  <div class="form-group ">
+    <label for="branches">Select Your Preferred Branches of Magic:</label>
+    <div class="row">
+       <div class="checkbox col-4"><label><input type="checkbox" value="Alchemy" name="branches"> Alchemy</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Broomology" name="branches"> Broomology</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Dark Magic" name="branches"> Dark Magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Divination" name="branches"> Divination</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Earth magic" name="branches"> Earth magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Herbology" name="branches"> Herbology</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Love Magic" name="branches"> Love Magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Magizoology" name="branches"> Magizoology</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Medical Magic" name="branches"> Medical Magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Mental magic" name="branches"> Mental magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Occlumency" name="branches"> Occlumency</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Plant magic" name="branches"> Plant magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Potions" name="branches"> Potions</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Spell creation" name="branches"> Spell creation</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Time Magic" name="branches"> Time Magic</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Transfiguration" name="branches"> Transfiguration</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Wandlore" name="branches"> Wandlore</label></div>
+       <div class="checkbox col-4"><label><input type="checkbox" value="Weather Magic" name="branches"> Weather Magic</label></div>
+  </div>
+  </div>
+  <div class="form-group">
+    <label for="comment">Leave a Comment:</label>
+    <textarea class="form-control" rows="5" id="comment" name="comment"></textarea>
+  </div>
+  <div class="clearfix">
+    <button type="submit" class="btn btn-default" id="submit">Submit</button>
+</div>
+</form>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
