--- a/react-markdown-previewer/index.html
+++ b/react-markdown-previewer/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Markdown Previewer</title>
+  <title>React - Markdown Previewer</title>
   
   
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
@@ -22,10 +22,11 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.development.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.19/marked.min.js'></script>
+<script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
 
   
 
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
 
 
 
